--- a/package.json
+++ b/package.json
@@ -23,11 +23,15 @@
     "next-auth": "^4.19.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.7.1",
+    "react-markdown": "^8.0.5",
+    "react-responsive-carousel": "^3.2.23",
     "superjson": "1.9.1",
     "tiny-invariant": "^1.3.1",
     "zod": "^3.20.2"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.9",
     "@types/node": "^18.11.18",
     "@types/prettier": "^2.7.2",
     "@types/react": "^18.0.26",
