--- a/package.json
+++ b/package.json
@@ -1,54 +1,69 @@
 {
-  "name": "fantasy-trip",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "build": "next build",
-    "dev": "next dev",
-    "postinstall": "prisma generate",
-    "lint": "next lint",
-    "start": "next start"
-  },
-  "dependencies": {
-    "@next-auth/prisma-adapter": "^1.0.5",
-    "@prisma/client": "^4.9.0",
-    "@tanstack/react-query": "^4.20.0",
-    "@trpc/client": "^10.9.0",
-    "@trpc/next": "^10.9.0",
-    "@trpc/react-query": "^10.9.0",
-    "@trpc/server": "^10.9.0",
-    "babel-plugin-superjson-next": "^0.4.5",
-    "daisyui": "^2.50.0",
-    "next": "13.1.6",
-    "next-auth": "^4.19.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-icons": "^4.7.1",
-    "react-markdown": "^8.0.5",
-    "react-responsive-carousel": "^3.2.23",
-    "superjson": "1.9.1",
-    "tiny-invariant": "^1.3.1",
-    "zod": "^3.20.2"
-  },
-  "devDependencies": {
-    "@tailwindcss/typography": "^0.5.9",
-    "@types/node": "^18.11.18",
-    "@types/prettier": "^2.7.2",
-    "@types/react": "^18.0.26",
-    "@types/react-dom": "^18.0.10",
-    "@typescript-eslint/eslint-plugin": "^5.47.1",
-    "@typescript-eslint/parser": "^5.47.1",
-    "autoprefixer": "^10.4.7",
-    "eslint": "^8.30.0",
-    "eslint-config-next": "13.1.6",
-    "postcss": "^8.4.14",
-    "prettier": "^2.8.1",
-    "prettier-plugin-tailwindcss": "^0.2.1",
-    "prisma": "^4.9.0",
-    "tailwindcss": "^3.2.0",
-    "typescript": "^4.9.4"
-  },
-  "ct3aMetadata": {
-    "initVersion": "7.5.1"
-  }
+    "name": "fantasy-trip",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "generate": "zenstack generate",
+        "db:push": "prisma db push",
+        "build": "next build",
+        "dev": "next dev",
+        "postinstall": "prisma generate",
+        "lint": "next lint",
+        "start": "next start",
+        "up": "npm i zenstack@canary && npm i @zenstackhq/runtime@canary @zenstackhq/next@canary @zenstackhq/react@canary"
+    },
+    "dependencies": {
+        "@next-auth/prisma-adapter": "^1.0.5",
+        "@paralleldrive/cuid2": "^2.0.1",
+        "@paypal/react-paypal-js": "^7.8.2",
+        "@prisma/client": "^4.9.0",
+        "@tanstack/react-query": "^4.20.0",
+        "@trpc/client": "^10.9.0",
+        "@trpc/next": "^10.9.0",
+        "@trpc/react-query": "^10.9.0",
+        "@trpc/server": "^10.9.0",
+        "@zenstackhq/next": "^1.0.0-alpha.36",
+        "@zenstackhq/react": "^1.0.0-alpha.36",
+        "@zenstackhq/runtime": "^1.0.0-alpha.36",
+        "babel-plugin-superjson-next": "^0.4.5",
+        "daisyui": "^2.50.0",
+        "dayjs": "^1.11.7",
+        "js-cookie": "^3.0.1",
+        "next": "13.1.6",
+        "next-auth": "^4.19.0",
+        "react": "18.2.0",
+        "react-dom": "18.2.0",
+        "react-hook-form": "^7.43.1",
+        "react-icons": "^4.7.1",
+        "react-markdown": "^8.0.5",
+        "react-responsive-carousel": "^3.2.23",
+        "superjson": "1.9.1",
+        "swr": "^2.0.3",
+        "tiny-invariant": "^1.3.1",
+        "uuid": "^9.0.0",
+        "zod": "^3.20.2"
+    },
+    "devDependencies": {
+        "@tailwindcss/typography": "^0.5.9",
+        "@types/js-cookie": "^3.0.2",
+        "@types/node": "^18.11.18",
+        "@types/prettier": "^2.7.2",
+        "@types/react": "^18.0.26",
+        "@types/react-dom": "^18.0.10",
+        "@typescript-eslint/eslint-plugin": "^5.47.1",
+        "@typescript-eslint/parser": "^5.47.1",
+        "autoprefixer": "^10.4.7",
+        "eslint": "^8.30.0",
+        "eslint-config-next": "13.1.6",
+        "postcss": "^8.4.14",
+        "prettier": "^2.8.1",
+        "prettier-plugin-tailwindcss": "^0.2.1",
+        "prisma": "^4.9.0",
+        "tailwindcss": "^3.2.0",
+        "typescript": "^4.9.4",
+        "zenstack": "^1.0.0-alpha.36"
+    },
+    "ct3aMetadata": {
+        "initVersion": "7.5.1"
+    }
 }
