--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "next-auth": "^4.19.0",
         "pluralize": "^8.0.0",
         "react": "18.2.0",
+        "react-datepicker": "^4.10.0",
         "react-dom": "18.2.0",
         "react-hook-form": "^7.43.1",
         "react-icons": "^4.7.1",
@@ -52,6 +53,7 @@
         "@types/pluralize": "^0.0.29",
         "@types/prettier": "^2.7.2",
         "@types/react": "^18.0.26",
+        "@types/react-datepicker": "^4.8.0",
         "@types/react-dom": "^18.0.10",
         "@typescript-eslint/eslint-plugin": "^5.47.1",
         "@typescript-eslint/parser": "^5.47.1",
