--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "@paralleldrive/cuid2": "^2.0.1",
         "@paypal/react-paypal-js": "^7.8.2",
         "@prisma/client": "^4.9.0",
+        "@tailwindcss/line-clamp": "^0.4.2",
         "@tanstack/react-query": "^4.20.0",
         "@trpc/client": "^10.9.0",
         "@trpc/next": "^10.9.0",
